hphp/hack/test/typecheck/first_class_polymorphism/reify_class_tparam_instance_method_bad.php.exp
ERROR: File "reify_class_tparam_instance_method_bad.php", line 8, characters 8-35:
Invalid function reference. This function requires reified generics. Prefer using a lambda instead. (Typing[4381])
