hphp/hack/test/typecheck/first_class_polymorphism/reify_class_tparam_instance_method_bad.php
<?hh

class C<reify TC> {
  public function foo<reify TFoo>(TFoo $x): void {}
}

function refIt(): void {
  $f = meth_caller(C::class, 'foo');
}
